K1J-551: Added v2 for customer portal API (#1168)
Co-authored-by: Mikael Heglind <mikael.heglind@soprasteria.com>